--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,36 +6,17 @@
     {
       "src": "android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     },
     {
       "src": "android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ],
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#0ea5e9",
   "background_color": "#f8fafc",
-  "orientation": "portrait",
-  "scope": "/",
-  "categories": ["lifestyle", "productivity", "health"],
-  "lang": "en",
-  "dir": "ltr",
-  "prefer_related_applications": false
+  "scope": "/"
 }
