--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,17 +6,23 @@
     {
       "src": "android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable any"
     },
     {
       "src": "android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable any"
     }
   ],
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#0ea5e9",
   "background_color": "#f8fafc",
-  "scope": "/"
+  "orientation": "portrait-primary",
+  "scope": "/",
+  "categories": ["lifestyle", "productivity", "health"],
+  "lang": "en",
+  "dir": "ltr"
 }
