fix: Resolve Vercel PWA static file routing issue
- Add specific routes for manifest.json and sw.js with correct MIME types
- Fix 401 Unauthorized error for manifest.json
- Fix service worker MIME type error (was serving HTML instead of JS)
- Add proper headers for PWA icon files
- This should resolve PWA installability issues on Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,27 @@
   ],
   "routes": [
     {
+      "src": "/manifest.json",
+      "headers": {
+        "Content-Type": "application/json",
+        "cache-control": "s-maxage=86400"
+      }
+    },
+    {
+      "src": "/sw.js",
+      "headers": {
+        "Content-Type": "application/javascript",
+        "cache-control": "s-maxage=0"
+      }
+    },
+    {
+      "src": "/android-chrome-(.*).png",
+      "headers": {
+        "Content-Type": "image/png",
+        "cache-control": "s-maxage=31536000,immutable"
+      }
+    },
+    {
       "src": "/static/(.*)",
       "headers": {
         "cache-control": "s-maxage=31536000,immutable"
