Changed app name and limit the install popup to three times per user

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Namaaz Tracker",
-  "name": "Jamā'ah Journal - Namaaz Tracker",
+  "short_name": "Jamā’ah Journal",
+  "name": "Jamā’ah Journal",
   "description": "Track your daily Namaaz habits and build spiritual discipline with prayer tracking, progress analytics, and community features.",
   "icons": [
     {
