--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,7 +32,7 @@
   "display": "standalone",
   "theme_color": "#0ea5e9",
   "background_color": "#f8fafc",
-  "orientation": "any",
+  "orientation": "portrait",
   "scope": "/",
   "categories": ["lifestyle", "productivity", "health"],
   "lang": "en",
