--- a/vercel.json
+++ b/vercel.json
@@ -46,6 +46,13 @@
       }
     },
     {
+      "src": "/LogoHeader.png",
+      "headers": {
+        "content-type": "image/png",
+        "cache-control": "s-maxage=86400"
+      }
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
