--- a/public/manifest.json
+++ b/public/manifest.json
@@ -28,13 +28,17 @@
       "purpose": "maskable"
     }
   ],
-  "start_url": "/",
+  "start_url": "/?v=v2025-09-02-0056",
   "display": "standalone",
   "theme_color": "#0ea5e9",
   "background_color": "#f8fafc",
   "orientation": "portrait",
   "scope": "/",
-  "categories": ["lifestyle", "productivity", "health"],
+  "categories": [
+    "lifestyle",
+    "productivity",
+    "health"
+  ],
   "lang": "en",
   "dir": "ltr"
 }
